<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            android:backgroundTint="#d9d9d9d9"
            app:cardCornerRadius="4dp">

            <ImageView
                android:id="@+id/imageViewList"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"/>


        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/likeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/like"
                android:drawableStart="@drawable/ic_star"
                android:layout_margin="4dp"
                android:drawablePadding="4dp"/>

            <TextView
                android:id="@+id/commentTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/comment"
                android:textSize="12sp"
                android:textStyle="bold" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/viewsTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/views"
                android:drawableStart="@drawable/ic_views"
                android:layout_margin="4dp"
                android:drawablePadding="4dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>